--- a/platformio.ini
+++ b/platformio.ini
@@ -29,3 +29,23 @@ lib_ignore =
 build_flags =
   -D ARDUINO_USB_MODE=1
   -D ARDUINO_USB_CDC_ON_BOOT=1
+
+[env:esp32s3]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+
+monitor_speed = 115200
+
+lib_deps =
+    adafruit/Adafruit GFX Library
+    adafruit/Adafruit ST7735 and ST7789 Library
+    FastLED
+
+lib_ignore =
+    SD
+
+build_flags =
+  -D ARDUINO_USB_MODE=1
+  -D ARDUINO_USB_CDC_ON_BOOT=1
+  -D BOARD_HAS_PSRAM
